--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="theme-color" content="#000000" />
-	<link rel="icon" href="/favicon.ico" />
-	<link rel="apple-touch-icon" href="/logo192.png" />
-	<link rel="manifest" href="/manifest.json" />
-	<title>Gradient</title>
-</head>
-<body>
-	<div id="root">
-		<div class="app">
-			<div class="nbColors"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Gradient</title>
+  </head>
+  <body>
+    <div id="root">
+      <div class="app">
+        <div class="nbColors"></div>
 
-			<div class="buttons group">
-				<button class="button" id="randFirst">Random First</button>
-				<button class="button" id="randAll">Random All</button>
-				<button class="button" id="randLast">Random Last</button>
-			</div>
+        <div class="buttons group">
+          <button class="button" id="randFirst">Random First</button>
+          <button class="button" id="randAll">Random All</button>
+          <button class="button" id="randLast">Random Last</button>
+        </div>
 
-			<div class="colors"></div>
+        <div class="colors"></div>
 
-			<div class="gradient"></div>
+        <div class="gradient"></div>
 
-			<div class="buttons group">
-				<button class="button" id="toLeft">to left</button>
-				<button class="button" id="toRight">to right</button>
-			</div>
-		</div>
-	</div>
-	<script type="module" src="/src/main.tsx"></script>
-</body>
+        <div class="buttons group">
+          <button class="button" id="to45deg">45deg</button>
+          <button class="button" id="to90deg">90deg</button>
+          <button class="button" id="to135deg">135deg</button>
+          <button class="button" id="to225deg">225deg</button>
+          <button class="button" id="to270deg">270deg</button>
+          <button class="button" id="to315deg">315deg</button>
+        </div>
+      </div>
+    </div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
