Découpage en composants statique

--- a/index.html
+++ b/index.html
@@ -10,30 +10,7 @@
     <title>Gradient</title>
   </head>
   <body>
-    <div id="root">
-      <div class="app">
-        <div class="nbColors"></div>
-
-        <div class="buttons group">
-          <button class="button" id="randFirst">Random First</button>
-          <button class="button" id="randAll">Random All</button>
-          <button class="button" id="randLast">Random Last</button>
-        </div>
-
-        <div class="colors"></div>
-
-        <div class="gradient"></div>
-
-        <div class="buttons group">
-          <button class="button" id="to45deg">45deg</button>
-          <button class="button" id="to90deg">90deg</button>
-          <button class="button" id="to135deg">135deg</button>
-          <button class="button" id="to225deg">225deg</button>
-          <button class="button" id="to270deg">270deg</button>
-          <button class="button" id="to315deg">315deg</button>
-        </div>
-      </div>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
